apply plugin: 'java'
apply plugin: 'application'
apply plugin: "io.spring.dependency-management"
apply plugin: "org.springframework.boot"

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.session:spring-session-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-web"
    runtimeOnly "org.postgresql:postgresql:42.2.23"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.security:spring-security-test:5.1.5.RELEASE"
}

jar {
    description = "twigs"
}

mainClassName = "com.wbrawner.twigs.TwigsServerApplication"

sourceCompatibility = 17
targetCompatibility = 17
